Use Link from react-router

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -50,6 +50,7 @@
     "eject": "react-scripts eject",
     "ipfs": "yarn build && node scripts/ipfs.js",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+     "deploy:dev": "yarn build && surge build offl1.surge.sh"
   }
 }
