--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react": "^16.9.53",
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.3.1",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
