--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -21,6 +21,8 @@
     "@connext/vector-utils": "^0.1.15",
     "@ethersproject/contracts": "^5.0.5",
     "@ethersproject/providers": "^5.0.12",
+    "@honeyswap/sdk": "^2.0.8",
+    "@pancakeswap-libs/sdk": "^1.0.1",
     "@project/contracts": "^1.0.0",
     "@testing-library/dom": "^6.16.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -38,6 +40,7 @@
     "graphql": "^14.7.0",
     "ipfs-http-client": "^45.0.0",
     "lodash": "^4.17.20",
+    "quickswap-sdk": "^3.0.8",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-router-dom": "^5.2.0",
