--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -39,6 +39,7 @@
     "chalk": "^4.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
+    "ethers": "^5.0.31",
     "graphql": "^14.7.0",
     "ipfs-http-client": "^45.0.0",
     "lodash": "^4.17.20",
