--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -48,6 +48,7 @@
     "react-dom": "16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
     "web3modal": "^1.9.3"
   },
