--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -44,6 +44,7 @@
     "graphql": "^14.7.0",
     "ipfs-http-client": "^45.0.0",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "quickswap-sdk": "^3.0.8",
     "react": "16.14.0",
     "react-dom": "16.14.0",
