--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -64,5 +64,6 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "deploy:dev": "yarn build && surge build offl1.surge.sh"
+    "deploy": "yarn build && surge build offl1.xyz"
   }
 }
