--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -63,7 +63,7 @@
     "ipfs": "yarn build && node scripts/ipfs.js",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "deploy:dev": "yarn build && surge build offl1.surge.sh"
+    "deploy:dev": "yarn build && surge build offl1.surge.sh",
     "deploy": "yarn build && surge build offl1.xyz"
   }
 }
