--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "@connext/vector-browser-node": "^0.1.15",
-    "@connext/vector-types": "^0.1.15",
-    "@connext/vector-utils": "^0.1.15",
+    "@connext/vector-browser-node": "^0.2.0-beta.5",
+    "@connext/vector-types": "^0.2.0-beta.5",
+    "@connext/vector-utils": "^0.2.0-beta.5",
     "@connext/vector-withdraw-helpers": "^0.0.1",
     "@ethersproject/bignumber": "^5.0.14",
     "@ethersproject/contracts": "^5.0.5",
