--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -31,7 +31,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/react": "^16.9.53",
     "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.3.1",
     "apollo-boost": "^0.4.9",
@@ -66,5 +65,12 @@
     "test": "react-scripts test",
     "deploy:dev": "yarn build && surge build offl1.surge.sh",
     "deploy": "yarn build && surge build offl1.xyz"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.32",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^17.0.2",
+    "typescript": "^4.2.3"
   }
 }
