--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -31,6 +31,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/mathjs": "^6.0.11",
     "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.3.1",
     "apollo-boost": "^0.4.9",
@@ -43,6 +44,7 @@
     "graphql": "^14.7.0",
     "ipfs-http-client": "^45.0.0",
     "lodash": "^4.17.20",
+    "mathjs": "^9.3.2",
     "moment": "^2.29.1",
     "quickswap-sdk": "^3.0.8",
     "react": "16.14.0",
